[compiler] Avoid the forced addition of the `-proc:full` compiler parameter by the platform #SCL-25236 fixed
- In the linked ticket, the user was able to reproduce this problem ahead of time when we became aware of it.
- In our tests, we observe the problem only in 262.
- In 262, Java 25 is used as the JPS build system Java runtime version.
- For Java versions >= 23, the platform forcefully appllies the `-proc:full` compiler parameter.
- This is fine for the JPS build process, but not fine for our Scala Compile Server, which is usually running an older version of Java, depending on the project.
- This issue is mostly visible in Maven projects where an annotation processor seems to always be configured by the platform.
- A previous workaround existed, which was to switch to the JPS incremental compiler.